apps/home/game/pelican-panel/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: upload-limit
  namespace: game
spec:
  buffering:
    maxRequestBodyBytes: 10485760 # 10 MB
