apps/home/game/pelican-panel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelican-panel
  namespace: game
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: game-upload-limit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pterodactyl.superkooka.com
      secretName: pelican-panel-tls
  rules:
    - host: pterodactyl.superkooka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pelican-panel-service
                port:
                  number: 80
